# computer-vision-jetson-nano

./: .gitignore  README.md  docker-compose.yml
dockers/: push_all
dockers/cuda/: Dockerfile
dockers/cudnn/: Dockerfile
dockers/detectnet/: CMakeLists.txt  CMakePreBuild.sh  Dockerfile
dockers/detectnet/tools/trt-console/: CMakeLists.txt
dockers/l4t/: Dockerfile
dockers/nvinfer/: Dockerfile
dockers/opencv/: Dockerfile  cuda_gl_interop.h.patch
dockers/tensorrt/: Dockerfile
dockers/vision/: Dockerfile
dockers/vision/vision/: nginx.conf  server.py  start.sh  uwsgi.ini  vision.py
dockers/vision/vision/templates/: index.html
dockers/vision/vision/views/: body.css  index.tpl
resources/: move_debs.sh
